Updates tsoa.json and renames authenticate-method to login
